Fix background not covering the whole screen on mobile phones

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+html {
+    min-height: 100%;
+}
+
 body { 
     background-image: url(/images/background.jpg) ;
     background-position: center center;
